// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultsPerPage renders markup with state 1`] = `
<ng-ais-results-per-page
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-ResultsPerPage"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-ResultsPerPage-header ais-"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    
    <div
      class="ais-ResultsPerPage-body ais-body"
    >
      
          
      <select
        class="ais-ResultsPerPage-select"
      >
        
            
        
        <option
          class="ais-ResultsPerPage-option"
          value="10"
        >
          
              10 per page
            
        </option>
        <option
          class="ais-ResultsPerPage-option"
          value="20"
        >
          
              20 per page
            
        </option>
        <option
          class="ais-ResultsPerPage-option"
          value="30"
        >
          
              30 per page
            
        </option>
        
          
      </select>
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-ResultsPerPage-footer ais-"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-results-per-page>
`;

exports[`ResultsPerPage renders markup without state 1`] = `
<ng-ais-results-per-page
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div>
    
        
    <ng-ais-header>
      
      
      
      
    
    </ng-ais-header>
    
  
        
    
    
  
        
    <ng-ais-footer>
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-results-per-page>
`;

exports[`ResultsPerPage should be hidden with autoHideContainer 1`] = `
<ng-ais-results-per-page
  autoHideContainer={[Function Boolean]}
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div>
    
        
    <ng-ais-header>
      
      
      
      
    
    </ng-ais-header>
    
  
        
    
    
  
        
    <ng-ais-footer>
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-results-per-page>
`;
